english cv draft

--- a/main-en.tex
+++ b/main-en.tex
@@ -1,7 +1,8 @@
 %-------------------------
 % Resume in Latex
-% Author : Aras Gungore
-% License : MIT
+% Author: Martin Yang
+% License: MIT
+% English version
 %------------------------
 
 \documentclass[letterpaper,11pt]{article}
@@ -26,7 +27,7 @@
 % sans-serif
 % \usepackage[sfdefault]{FiraSans}
 % \usepackage[sfdefault]{roboto}
-% \usepackage[sfdefault]{noto-sans}
+\usepackage[sfdefault]{noto-sans}
 % \usepackage[default]{sourcesanspro}
 
 % serif
