update documents (and pdf)

--- a/main-cn.tex
+++ b/main-cn.tex
@@ -96,12 +96,11 @@
 }
 
 
-\newcommand{\resumeEducationHeading}[6]{
+\newcommand{\resumeEducationHeading}[4]{
   \vspace{-2pt}\item
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
       \textit{\small#3} & \textit{\small #4} \\
-      \textit{\small#5} & \textit{\small #6} \\
     \end{tabular*}\vspace{-5pt}
 }
 
@@ -147,7 +146,7 @@
     $|$
     \faGithub \hspace{.5pt} \href{https://github.com/yangrq1018}{GitHub}
     $|$
-    \faGlobe \hspace{.5pt} \href{https://yangruoqi.site}{网站}
+    \faGlobe \hspace{.5pt} \href{https://yangruoqi.site}{个人网站}
     $|$
     \faMapMarker \hspace{.5pt} 广东$ $深圳
 \end{center}
@@ -159,15 +158,18 @@
 \section{教育经历}
   \vspace{3pt}
   \resumeSubHeadingListStart
-    \resumeSubheading
+    \resumeEducationHeading
       {伦敦帝国理工}                                    {英国$ $伦敦 }
       {金融学硕士   \textbf{毕业成绩: Distinction}}     {2019年9月 \textbf{--} 2020年6月}
 
     \resumeEducationHeading
       {香港大学}                              {中国$ $香港}
-      {经济\&金融学学士;   \textbf{GPA: 3.65/4.30}}     {2015年9月 \textbf{--} 2019年6月}
-      {计算机科学辅修;   }            {2015年9月 \textbf{--} 2019年6月}
+      {经济\&金融学学士; 辅修计算机科学;
+                    \textbf{GPA: 3.65/4.30}}     {2015年9月 \textbf{--} 2019年6月}
 
+    \resumeEducationHeading
+      {乔治华盛顿大学}                         {美国$ $华盛顿特区}
+      {交换生}                                 {2018年1月 \textbf{--} 2018年6月}
   \resumeSubHeadingListEnd
 
 
